--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h1 {
 .hacking {
     width: 250px;
     height: 600px;
-    background-color: white;
+    background-color: #363636;
     position: relative;
     display: inline-block;
     border-radius: 35px;
@@ -130,7 +130,7 @@ h1 {
     margin-right: 25px;
     display: block;
     position: relative;
-    background-color: white;
+    background-color: #363636;
     border-radius: 35px;
     overflow: hidden;
     opacity: 0;
@@ -143,7 +143,7 @@ h1 {
     margin-right: 25px;
     position: relative;
     display: inline-block;
-    background-color: white;
+    background-color: #363636;
     border-radius: 35px;
     overflow: hidden;
     opacity: 0;
